# optical-design

./: .gitignore  CHANGELOG.md  LICENSE  README.md  format.sh  hie.yaml  optical-design.cabal
app/: Main.hs
src/: OpticalDesign.hs
