cabal-version:   2.4
name:            optical-design
version:         0.0.0.0
synopsis:        See README for more info
description:     See README for more info
homepage:        https://github.com/lancelet/optical-design
bug-reports:     https://github.com/lancelet/optical-design/issues
license:         MIT
license-file:    LICENSE
author:          Jonathan Merritt
maintainer:      Jonathan Merritt <j.s.merritt@gmail.com>
copyright:       2020 Jonathan Merritt
category:        Graphics
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:     GHC ==8.8.3

source-repository head
  type:     git
  location: https://github.com/lancelet/optical-design.git

common common-options
  build-depends:    base ^>=4.13.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: OpticalDesign

executable optical-design
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  optical-design
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite optical-design-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:  optical-design
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark optical-design-benchmark
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Main.hs
  build-depends:
    , gauge
    , optical-design

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
